--- a/Лабораторная-работа.-Поиск-файлов.md
+++ b/Лабораторная-работа.-Поиск-файлов.md
@@ -42,6 +42,7 @@ find /usr/bin /usr/share -type f  -ctime -10d
 find /tmp -type f -mtime +2w -delete
 1. Найдите все **файлы** (и только файлы) в каталоге `/usr/bin` с установленным флагом suid/sgid.
 find /usr/bin -type f -perm /u=s,g=s
+find /usr/bin -type f -perm -u+s -o -perm -g+s -выведет там где suid,sgid и там где suid и sgid
 
 Используя команды `find` и `xargs` или параметр `-exec` команды `find`:
 
